update Tab & Slider

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
 
 .App {
+  margin-top: 30px;
   font-family: 'Do Hyeon', sans-serif;
   text-align: center;
 }
