--- a/src/components/Slider.module.css
+++ b/src/components/Slider.module.css
@@ -27,8 +27,9 @@
   border-radius: 25px;
   margin-bottom: 5px;
   opacity: 1;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+  transition: 0.5s ease;
 }
 .slider:hover {
   opacity: 1;
@@ -44,6 +45,7 @@
   border-radius: 25px;
   color: skyblue;
   cursor: pointer;
+  transition: 0.5s ease;
 }
 
 .slider__button__container {
@@ -65,9 +67,9 @@
   opacity: 0.7;
 }
 .slider__button__container div:hover {
-    background-color: skyblue;
+  background-color: skyblue;
   opacity: 1;
 }
-.slider__button__container div :active{
-    background-color: skyblue;
+.slider__button__container div :active {
+  background-color: skyblue;
 }
